Fix z-index issues - Move "back to top" bottom above tiles

--- a/_assets/stylesheets/_back-to-top.scss
+++ b/_assets/stylesheets/_back-to-top.scss
@@ -26,6 +26,7 @@
 
   visibility: hidden;
   opacity: 0;
+  z-index: 10;
 
   transition: opacity 0.3s 0s, visibility 0s 0.3s;
 
